# internal/domain/models/requests.go
@@ -6,3 +6,12 @@ type ConnectionRequest struct {
 	Model    string `json:"model"`                       // Human readable name
 	Series   string `json:"series"`                      // "0i", "31i"
 }
+
+type StartPollingRequest struct {
+	ID       string `json:"id" binding:"required"`
+	Interval int    `json:"interval"` // ms, default 10000
+}
+
+type StopPollingRequest struct {
+	ID string `json:"id" binding:"required"`
+}
